# dota2-item-explorer

./: README.md  computed-items.json  dota-items.py  dota_client.py  dota_item_model.py  dotabuff.py  index.html  index.js  items.json  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: main.yml
static/: dota2-item-explorer.css  index.js  items.js  mvp.css
static/app/: dota2-item-explorer.css  index.js  items.js
static/app/components/: Hello.vue  StatFilter.vue
