[tool.poetry]
name = "dota2-item-explorer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.9.3"
httpx = "^0.18.2"
Pillow = "^8.1.2"
python = "^3.9"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
djhtml = "^1.4.9"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
